--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/demo
+spring.data.mongodb.uri=mongodb+srv://jeantr35:ZjEevYjhrfQ384wa@proyectos.u19ea.mongodb.net/question?retryWrites=true&w=majority
