--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.data.mongodb.uri=mongodb+srv://jeantr35:ZjEevYjhrfQ384wa@proyectos.u19ea.mongodb.net/question?retryWrites=true&w=majority
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=jean.trujillo.35@gmail.com
+spring.mail.password=ycqdrflntmzlvuhu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.quitwait=false
